SymbolicOptimizer/src/main/java/qasm/QASMParser.java
// Generated from QASM.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class QASMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, OPENQASM_KW=11, INCLUDE_KW=12, QREG_KW=13, CREG_KW=14, MEASURE_KW=15, 
		TO=16, RESET_KW=17, BARRIER_KW=18, PI_KW=19, QUBIT=20, ID=21, REAL_LITERAL=22, 
		INT_LITERAL=23, STRING_LITERAL=24, WORD=25, PLUS=26, MINUS=27, MULT=28, 
		DIV=29, WHITESPACE=30;
	public static final int
		RULE_program = 0, RULE_header = 1, RULE_declaration = 2, RULE_qreg_decl = 3, 
		RULE_creg_decl = 4, RULE_rewrites = 5, RULE_rewrite_body = 6, RULE_rewrite = 7, 
		RULE_equality = 8, RULE_statement = 9, RULE_gate_statement = 10, RULE_qubits = 11, 
		RULE_qubit = 12, RULE_measure_statement = 13, RULE_reset_statement = 14, 
		RULE_barrier_statement = 15, RULE_expression = 16, RULE_multExpr = 17, 
		RULE_atomExpr = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "header", "declaration", "qreg_decl", "creg_decl", "rewrites", 
			"rewrite_body", "rewrite", "equality", "statement", "gate_statement", 
			"qubits", "qubit", "measure_statement", "reset_statement", "barrier_statement", 
			"expression", "multExpr", "atomExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'['", "']'", "'|'", "'when'", "','", "'='", "'!='", "'('", 
			"')'", "'OPENQASM'", "'include'", "'qreg'", "'creg'", "'measure'", "'->'", 
			"'reset'", "'barrier'", "'pi'", null, null, null, null, null, null, "'+'", 
			"'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "OPENQASM_KW", 
			"INCLUDE_KW", "QREG_KW", "CREG_KW", "MEASURE_KW", "TO", "RESET_KW", "BARRIER_KW", 
			"PI_KW", "QUBIT", "ID", "REAL_LITERAL", "INT_LITERAL", "STRING_LITERAL", 
			"WORD", "PLUS", "MINUS", "MULT", "DIV", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QASM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QASMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(QASMParser.EOF, 0); }
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case OPENQASM_KW:
			case QREG_KW:
			case CREG_KW:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPENQASM_KW) {
					{
					setState(38);
					header();
					}
				}

				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==QREG_KW || _la==CREG_KW) {
					{
					{
					setState(41);
					declaration();
					}
					}
					setState(46);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(47);
					statement();
					}
					}
					setState(52);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(53);
				match(EOF);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				match(T__0);
				setState(55);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode OPENQASM_KW() { return getToken(QASMParser.OPENQASM_KW, 0); }
		public TerminalNode REAL_LITERAL() { return getToken(QASMParser.REAL_LITERAL, 0); }
		public TerminalNode INCLUDE_KW() { return getToken(QASMParser.INCLUDE_KW, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(QASMParser.STRING_LITERAL, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(OPENQASM_KW);
			setState(59);
			match(REAL_LITERAL);
			setState(60);
			match(T__0);
			setState(61);
			match(INCLUDE_KW);
			setState(62);
			match(STRING_LITERAL);
			setState(63);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public Qreg_declContext qreg_decl() {
			return getRuleContext(Qreg_declContext.class,0);
		}
		public Creg_declContext creg_decl() {
			return getRuleContext(Creg_declContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QREG_KW:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				qreg_decl();
				}
				break;
			case CREG_KW:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				creg_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Qreg_declContext extends ParserRuleContext {
		public TerminalNode QREG_KW() { return getToken(QASMParser.QREG_KW, 0); }
		public TerminalNode ID() { return getToken(QASMParser.ID, 0); }
		public TerminalNode INT_LITERAL() { return getToken(QASMParser.INT_LITERAL, 0); }
		public Qreg_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qreg_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterQreg_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitQreg_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitQreg_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Qreg_declContext qreg_decl() throws RecognitionException {
		Qreg_declContext _localctx = new Qreg_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qreg_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(QREG_KW);
			setState(70);
			match(ID);
			setState(71);
			match(T__1);
			setState(72);
			match(INT_LITERAL);
			setState(73);
			match(T__2);
			setState(74);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Creg_declContext extends ParserRuleContext {
		public TerminalNode CREG_KW() { return getToken(QASMParser.CREG_KW, 0); }
		public TerminalNode ID() { return getToken(QASMParser.ID, 0); }
		public TerminalNode INT_LITERAL() { return getToken(QASMParser.INT_LITERAL, 0); }
		public Creg_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creg_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterCreg_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitCreg_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitCreg_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Creg_declContext creg_decl() throws RecognitionException {
		Creg_declContext _localctx = new Creg_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_creg_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(CREG_KW);
			setState(77);
			match(ID);
			setState(78);
			match(T__1);
			setState(79);
			match(INT_LITERAL);
			setState(80);
			match(T__2);
			setState(81);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RewritesContext extends ParserRuleContext {
		public List<RewriteContext> rewrite() {
			return getRuleContexts(RewriteContext.class);
		}
		public RewriteContext rewrite(int i) {
			return getRuleContext(RewriteContext.class,i);
		}
		public RewritesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rewrites; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterRewrites(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitRewrites(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitRewrites(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RewritesContext rewrites() throws RecognitionException {
		RewritesContext _localctx = new RewritesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rewrites);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==ID) {
				{
				{
				setState(83);
				rewrite();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Rewrite_bodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Rewrite_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rewrite_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterRewrite_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitRewrite_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitRewrite_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rewrite_bodyContext rewrite_body() throws RecognitionException {
		Rewrite_bodyContext _localctx = new Rewrite_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rewrite_body);
		try {
			int _alt;
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(90); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(89);
						statement();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(92); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RewriteContext extends ParserRuleContext {
		public Rewrite_bodyContext lhs;
		public Rewrite_bodyContext rhs;
		public List<Rewrite_bodyContext> rewrite_body() {
			return getRuleContexts(Rewrite_bodyContext.class);
		}
		public Rewrite_bodyContext rewrite_body(int i) {
			return getRuleContext(Rewrite_bodyContext.class,i);
		}
		public List<EqualityContext> equality() {
			return getRuleContexts(EqualityContext.class);
		}
		public EqualityContext equality(int i) {
			return getRuleContext(EqualityContext.class,i);
		}
		public RewriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rewrite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterRewrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitRewrite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitRewrite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RewriteContext rewrite() throws RecognitionException {
		RewriteContext _localctx = new RewriteContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rewrite);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(97);
			((RewriteContext)_localctx).lhs = rewrite_body();
			}
			setState(98);
			match(T__3);
			{
			setState(99);
			((RewriteContext)_localctx).rhs = rewrite_body();
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(100);
				match(T__4);
				setState(101);
				equality();
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(102);
					match(T__5);
					{
					setState(103);
					equality();
					}
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EqualityContext extends ParserRuleContext {
		public Token op;
		public List<TerminalNode> QUBIT() { return getTokens(QASMParser.QUBIT); }
		public TerminalNode QUBIT(int i) {
			return getToken(QASMParser.QUBIT, i);
		}
		public EqualityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equality; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterEquality(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitEquality(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitEquality(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualityContext equality() throws RecognitionException {
		EqualityContext _localctx = new EqualityContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_equality);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(111);
				match(QUBIT);
				setState(112);
				((EqualityContext)_localctx).op = match(T__6);
				setState(113);
				match(QUBIT);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(114);
				match(QUBIT);
				setState(115);
				((EqualityContext)_localctx).op = match(T__7);
				setState(116);
				match(QUBIT);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Gate_statementContext gate_statement() {
			return getRuleContext(Gate_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			gate_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Gate_statementContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QASMParser.ID, 0); }
		public QubitsContext qubits() {
			return getRuleContext(QubitsContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Gate_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gate_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterGate_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitGate_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitGate_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Gate_statementContext gate_statement() throws RecognitionException {
		Gate_statementContext _localctx = new Gate_statementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_gate_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(ID);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(122);
				match(T__8);
				setState(123);
				expression();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(124);
					match(T__5);
					setState(125);
					expression();
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(131);
				match(T__9);
				}
			}

			setState(135);
			qubits();
			setState(136);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QubitsContext extends ParserRuleContext {
		public List<QubitContext> qubit() {
			return getRuleContexts(QubitContext.class);
		}
		public QubitContext qubit(int i) {
			return getRuleContext(QubitContext.class,i);
		}
		public QubitsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qubits; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterQubits(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitQubits(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitQubits(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QubitsContext qubits() throws RecognitionException {
		QubitsContext _localctx = new QubitsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_qubits);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			qubit();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(139);
				match(T__5);
				setState(140);
				qubit();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QubitContext extends ParserRuleContext {
		public Token num;
		public TerminalNode ID() { return getToken(QASMParser.ID, 0); }
		public TerminalNode INT_LITERAL() { return getToken(QASMParser.INT_LITERAL, 0); }
		public TerminalNode QUBIT() { return getToken(QASMParser.QUBIT, 0); }
		public QubitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qubit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).enterQubit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QASMListener ) ((QASMListener)listener).exitQubit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QASMVisitor ) return ((QASMVisitor<? extends T>)visitor).visitQubit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QubitContext qubit() throws RecognitionException {
		QubitContext _localctx = new QubitContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_qubit);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(146);
				match(ID);
				setState(147);
				match(T__1);
				setState(148);
				((QubitContext)_localctx).num = match(INT_LITERAL);
				setState(149);
				match(T__2);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(QUBIT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
